# tictactoe

./: CMakeLists.txt  README.md
cmake/modules/: FindSDL2.cmake
source/: CMakeLists.txt  main.cpp
source/gameLogic/: CMakeLists.txt
source/gameLogic/include/: GameState.h
source/gameLogic/src/: GameState.cpp
source/ui/: CMakeLists.txt
source/ui/include/: .gitignore  App.h  Focusable.h  Screen.h  Texture.h  UIelement.h  constants.h.in
source/ui/src/: App.cpp  Screen.cpp  Texture.cpp  UIelement.cpp
src/: main.cpp
